@@ -2,6 +2,9 @@ update-manager (1:0.87.22) hardy; urgency=low
 
   * UpdateManager/UpdateManager.py:
     - only set http proxy if hostname/port is valid (LP: #219227)
+  * DistUpgrade/DistUpgradeController.py: 
+    - some more debug logging 
+    - fix missing cache open
 
  --
 
